# SuDoKu

./: SuDoKu.sln
SuDoKu/: CMakeLists.txt  MatrixContainerInterface.h  SuDoKu.cpp  SuDoKu.vcxproj  SuDoKu.vcxproj.filters
SuDoKu/interfaces/: MatrixContainerInterface.h  board.h
SuDoKu/logging/: logger.cpp  logger.h
